--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Dong Party</title>
+    <title>FarmCloud</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -25,12 +27,6 @@
       html, body { height: 100%; margin: 0; padding: 0; }
       #map { height: 100%; }
     </style>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -50,18 +46,60 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-<div id="map"></div>
+    <div id="map"></div>
     <script type="text/javascript">
 
-var map;
-function initMap() {
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: 42.029900, lng: -93.638396},
-    zoom: 8,
-    mapTypeId: google.maps.MapTypeId.SATELLITE
-  }); 
-}
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 42.029900, lng: -93.638396},
+          zoom: 5,
+          mapTypeId: google.maps.MapTypeId.SATELLITE
+        }); 
 
+        var input = document.getElementById('pac-input');
+          var searchBox = new google.maps.places.SearchBox(input);
+          map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+          map.addListener('bounds_changed', function() {
+            searchBox.setBounds(map.getBounds());
+          });
+
+        // Set the Polygons and Markers
+        var rectangle = new google.maps.Rectangle();
+
+         var triangleCoords = [
+          {lat: 42.774, lng: -93.190},
+          {lat: 41.466, lng: -94.118},
+          {lat: 43.321, lng: -94.757},
+          {lat: 42.774, lng: -93.190}
+        ];
+
+        // Construct the polygon.
+        var triangle = new google.maps.Polygon({
+          paths: triangleCoords,
+          strokeColor: '#FF0000',
+          strokeOpacity: 0.8,
+          strokeWeight: 2,
+          fillColor: '#FF0000',
+          fillOpacity: 0.35
+        });
+        triangle.setMap(map);
+
+        var contentString = "<div>Call Mac Liu @ 402-981-2517 to discuss more about this land</div>";
+
+        var infowindow = new google.maps.InfoWindow({
+          content: contentString
+        });
+        var marker = new google.maps.Marker({
+          position: {lat: 42.02, lng: -93.63},
+          map: map,
+          title: 'The Macs Land'
+        });
+        marker.addListener('click', function() {
+          infowindow.open(map, marker);
+        });
+    }
     </script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjSi1ORbsw9lI4LwK0oGX0jGyh086knJk&callback=initMap">
@@ -70,7 +108,7 @@ function initMap() {
     <div class="container">
       <hr>
       <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; FarmCloud 2015</p>
       </footer>
     </div> <!-- /container -->
 
