--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
 
+
     <style type="text/css">
       html, body { height: 100%; margin: 0; padding: 0; }
       #map { height: 100%; }
@@ -45,7 +46,7 @@
       </div>
     </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <input id="pac-input" class="controls" type="text" placeholder="Search your location"> </input>
     <div id="map"></div>
     <script type="text/javascript">
 
@@ -63,6 +64,50 @@
 
           map.addListener('bounds_changed', function() {
             searchBox.setBounds(map.getBounds());
+          });
+          var markers = [];
+          // Listen for the event fired when the user selects a prediction and retrieve
+          // more details for that place.
+          searchBox.addListener('places_changed', function() {
+            var places = searchBox.getPlaces();
+
+            if (places.length == 0) {
+              return;
+            }
+
+            // Clear out the old markers.
+            markers.forEach(function(marker) {
+              marker.setMap(null);
+            });
+            markers = [];
+
+            // For each place, get the icon, name and location.
+            var bounds = new google.maps.LatLngBounds();
+            places.forEach(function(place) {
+              var icon = {
+                url: place.icon,
+                size: new google.maps.Size(71, 71),
+                origin: new google.maps.Point(0, 0),
+                anchor: new google.maps.Point(17, 34),
+                scaledSize: new google.maps.Size(25, 25)
+              };
+
+              // Create a marker for each place.
+              markers.push(new google.maps.Marker({
+                map: map,
+                icon: icon,
+                title: place.name,
+                position: place.geometry.location
+              }));
+
+              if (place.geometry.viewport) {
+                // Only geocodes have viewport.
+                bounds.union(place.geometry.viewport);
+              } else {
+                bounds.extend(place.geometry.location);
+              }
+            });
+            map.fitBounds(bounds);
           });
 
         // Set the Polygons and Markers
@@ -102,7 +147,7 @@
     }
     </script>
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjSi1ORbsw9lI4LwK0oGX0jGyh086knJk&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjSi1ORbsw9lI4LwK0oGX0jGyh086knJk&libraries=places&callback=initMap">
     </script>
 
     <div class="container">
