--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <body>
 
-    <nav style="background-color:#1ab864;" class="navbar navbar-inverse navbar-fixed-top">
+    <nav style="background-color:#3BAD58;" class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
