--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
         marker.addListener('click', function() {
           infowindow.open(map, marker);
         });
+        var ctaLayer = new google.maps.KmlLayer({
+          url: 'https://github.com/dongparty/KS-kml/blob/master/KML-9d45bde04bcf25d2187993c602c1d7bb.kml',
+          map: map
+        });
     }
     </script>
     <script async defer
