Changed Title to Tillage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>FarmCloud</title>
+    <title>Tillage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a id="navbar-title" class="navbar-brand" href="#">FarmCloud</a>
+         
+          <a id="navbar-title" class="navbar-brand" href="#">Tillage</a>
         </div>
       </div>
     </nav>
@@ -158,7 +159,7 @@
     <div class="container">
       <hr>
       <footer>
-        <p>&copy; FarmCloud 2015</p>
+        <p>&copy; Tillage 2015</p>
       </footer>
     </div> <!-- /container -->
 
