Changed background color, added text under map

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
   </head>
 
-  <body>
+  <body style="background-color:#000000;">
 
     <nav style="background-color:#3BAD58;" class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -156,10 +156,17 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjSi1ORbsw9lI4LwK0oGX0jGyh086knJk&libraries=places&callback=initMap">
     </script>
 
+    <div>
+      <h3 id="text-big"> About the Website<h3>
+        <li id="text-small">Buy/Sell land using map functions</li>
+        <li id="text-small">Blah</li>
+        <li id="text-small">Blah Blah</li>
+    </div>
+
     <div class="container">
       <hr>
       <footer>
-        <p>&copy; Tillage 2015</p>
+        <p style="color: #FFFFFF">&copy; Tillage 2015</p>
       </footer>
     </div> <!-- /container -->
 
