--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Dong Party</title>
+    <title>Tillage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,9 +31,9 @@
     </style>
   </head>
 
-  <body style="background-color:#000000;">
+  <body style="background-color:#666C73;">
 
-    <nav style="background-color:#3BAD58;" class="navbar navbar-inverse navbar-fixed-top">
+    <nav style="background-color:#2c3641;" class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
