--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
           </button>
          
-          <a id="navbar-title" class="navbar-brand" href="#">Tillage</a>
+          <a class="navbar-brand" id="Navsize" href="#"> <img id="navbar-logo" src="img/Logonew.png"> </a>
         </div>
       </div>
     </nav>
