--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>Tillage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    <!-- Custom styles for this template 
+    <link href="jumbotron.css" rel="stylesheet">-->
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -29,6 +28,8 @@
       html, body { height: 100%; margin: 0; padding: 0; }
       #map { height: 100%; }
     </style>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
 
   <body style="background-color:#666C73;">
@@ -43,7 +44,7 @@
             <span class="icon-bar"></span>
           </button>
          
-          <a class="navbar-brand" id="Navsize" href="#"> <img id="navbar-logo" src="img/Logonew.png"> </a>
+          <a class="navbar-brand" href="#"> <img id="navbar-logo" src="img/Logonew.png"> </a>
         </div>
       </div>
     </nav>
@@ -188,10 +189,9 @@
     </script>
 
     <div>
-      <h3 id="text-big"> About the Website<h3>
-        <li id="text-small">Buy/Sell land using map functions</li>
-        <li id="text-small">Blah</li>
-        <li id="text-small">Blah Blah</li>
+      <h3 id="text-big"> Find the right farmland.<h3>
+        <p id="text-small">It's more than dirt. Apply to join our new smart platform for connecting the right people with the right land at the right price.
+        <p id="text-small">Proudly built in Iowa, home of the world's most valuable farmland.</p>
     </div>
 
     <div class="container">
